test/valid/structs3.art
struct D {}
struct E { d: D }
struct A {
    x: i32,
    y: i64
}
struct B[T] {
    x: T,
    y: i64
}
struct C[T, U] {
    x: T,
    y: U
}
let _ : A = A { x = 1 : i32, y = 2 : i64 };
let _ : A = A { y = 2 : i64, x = 1 : i32 };
let _ : B[i32] = B[i32] { x = 1 : i32, y = 2 : i64 };
let _ : B[i32] = B[i32] { y = 2 : i64, x = 1 : i32 };
let _ : C[i32, i64] = C[i32, i64] { x = 1 : i32, y = 2 : i64 };
let _ : C[i32, i64] = C[i32, i64] { y = 2 : i64, x = 1 : i32 };
let d : D = D {};
let _ : E = E { d = d };

